--- a/src/main/resources/templates/Fragments/header.html
+++ b/src/main/resources/templates/Fragments/header.html
@@ -51,7 +51,7 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="#">Quản lý điểm</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Quản lý học phần</a>
+                        <a class="dropdown-item" href="/QLHocPhan/khoa">Quản lý học phần</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#">Quản lý đăng ký học phần</a>
                         <div class="dropdown-divider"></div>
