--- a/src/main/resources/templates/Fragments/sidebar.html
+++ b/src/main/resources/templates/Fragments/sidebar.html
@@ -26,7 +26,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#edit">
+                            <a href="/QLHocPhan/khoa">
                                 <span class="link-collapse">Quản lý học phần</span>
                             </a>
                         </li>
