--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="UTF-8">
@@ -8,6 +8,8 @@
     <title>Đăng nhập</title>
     <link rel="shortcut icon" href="assets/img/Logo_HCMUNRE.png" type="image/x-icon">
     <link rel="stylesheet" href="assets/css/login.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.js"
+        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Poppins:600&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a81368914c.js"></script>
 </head>
@@ -24,6 +26,13 @@
                 <div class="container">
                 </div>
                 <div class="login-content">
+                    <!-- <th:block th:if="${messageSend != ''}">
+                        <script type="text/javascript" charset="utf-8">
+                            window.onload = function () {
+                            alert("Tên đăng nhập hoặc mật khẩu không chính xác");
+                        };
+                        </script> 
+                    </th:block> -->
                     <form method="post" th:action="@{/j_spring_security_check}">
                         <h2 class="title">Welcome</h2>
                         <div class="input-div one">
@@ -32,7 +41,7 @@
                             </div>
                             <div class="div">
                                 <h5>Tài khoản</h5>
-                                <input id="TaiKhoan" name="TaiKhoan" type="text" class="input">
+                                <input id="TaiKhoan" name="TaiKhoan" type="text" class="input" required>
                             </div>
                         </div>
                         <div class="input-div pass">
@@ -41,7 +50,7 @@
                             </div>
                             <div class="div">
                                 <h5>Mật khẩu</h5>
-                                <input id="MatKhau" name="MatKhau" type="password" class="input">
+                                <input id="MatKhau" name="MatKhau" type="password" class="input" required>
                             </div>
                         </div>
                         <a href="#" id="myBtn">Quên mật khẩu</a>
@@ -53,20 +62,20 @@
     </div>
     <!--Modal-->
     <div id="myModal" class="modal">
-
-        <!-- Modal content -->
+        <!-- Modal content th:onclick="sendMail()"  th:action="@{/sendMail}"-->
         <div class="modal-content">
             <span class="close">&times;</span>
             <h2 class="title-modal">NHẬP EMAIL EDU</h2>
             <div class="login-content">
-                <form action="home.html">
+                <form id="form1" method="post">
                     <div class="input-div one">
                         <div class="i">
                             <i class="fa fa-envelope"></i>
                         </div>
                         <div class="div">
                             <h5>abcxyz@hcmunre.edu.vn</h5>
-                            <input type="email" class="input">
+                            <input id="gmail" name="gmail" pattern="^[0-9]{10}@sv.hcmunre.edu.vn$" type="email"
+                                class="input" required>
                         </div>
                     </div>
                     <input type="button" class="btn" value="Gửi mã" id="sendBtn">
@@ -76,18 +85,20 @@
     </div>
 
     <div id="myModal2" class="modal">
-        <div class="modal-content">
+
+        <div class="modal-content" id="modalconfirm">
             <span class="close" onclick="close_modal()">&times;</span>
             <h2 class="title-modal">MÃ XÁC NHẬN</h2>
             <div class="login-content">
-                <form action="home.html">
+                <form action="#" method="post">
+                    <input hidden type="text" id="codeSession" th:value="${session.CODE}" />
                     <div class="input-div one">
                         <div class="i">
                             <i class="fa fa-code"></i>
                         </div>
                         <div class="div">
                             <h5>Code</h5>
-                            <input type="number" class="input">
+                            <input type="text" id="codefondirm" value="" class="input" required>
                         </div>
                     </div>
                     <input type="button" class="btn" value="Nhập" id="comfirmBtn">
@@ -101,14 +112,14 @@
             <span class="close" onclick="close_modal()">&times;</span>
             <h2 class="title-modal">ĐỔI MẬT KHẨU</h2>
             <div class="login-content">
-                <form action="home.html">
+                <form action="#" method="post">
                     <div class="input-div one">
                         <div class="i">
                             <i class="fas fa-lock"></i>
                         </div>
                         <div class="div">
                             <h5>Nhập mật khẩu</h5>
-                            <input type="text" class="input">
+                            <input onkeyup="checkPassSame()" name="newpass" id="newpass" type="text" class="input">
                         </div>
                     </div>
                     <div class="input-div one">
@@ -117,10 +128,11 @@
                         </div>
                         <div class="div">
                             <h5>Nhập lại mật khẩu</h5>
-                            <input type="text" class="input">
+                            <input onkeyup="checkPassSame()" id="confirmpass" name="confirmpass" type="text"
+                                class="input">
                         </div>
                     </div>
-                    <input type="button" class="btn" value="Gửi mã">
+                    <input type="button" class="btn" id="btncofirmPass" value="Xác nhận">
                 </form>
             </div>
         </div>
