--- a/src/main/resources/templates/QuanLy/Khoa.html
+++ b/src/main/resources/templates/QuanLy/Khoa.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 	  layout:decorate="~{_layout.html}">
 <head>
-	<title>Ready Bootstrap Dashboard</title>
+	<title>Các khoa</title>
 </head>
 <body layout:fragment="content">
 	<div class="wrapper">
@@ -14,7 +14,7 @@
 							<div th:each="kh:${listKhoa}" class="col-md-4">
 								<div class="card card-stats card-success">
 									<div class="card-body ">
-										<a th:href="@{${kh.getMaKhoa()}}" class="row">
+										<a th:href="@{'/QLHocPhan/'+${kh.getMaKhoa()}}" class="row">
 											<div class="col-5">
 												<div class="icon-big text-center">
 													<img src="/assets/img/logo-dai-hoc-tai-nguyen-va-moi-truong-hcmunre.webp" class="image-logo">
