--- a/src/main/resources/templates/_layout.html
+++ b/src/main/resources/templates/_layout.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i">
   <link rel="stylesheet" href="/assets/css/ready.css">
   <link rel="stylesheet" href="/assets/css/demo.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.13.1/css/jquery.dataTables.css">
 </head>
 <body>
 <div class="wrapper">
@@ -39,4 +40,15 @@
 <script src="/assets/js/ready.min.js"></script>
 <script src="/assets/js/demo.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.13.1/js/jquery.dataTables.js"></script>
+<script>
+    $(document).ready( function () {
+        $('#listHocPhan').DataTable({
+            lengthMenu: [
+                [5, 10, 15, -1],
+                [5, 10, 15, 'All'],
+            ],
+        });
+    } );
+</script>
 </html>
