--- a/src/main/resources/templates/Fragments/header.html
+++ b/src/main/resources/templates/Fragments/header.html
@@ -43,13 +43,13 @@
                         <a class="dropdown-item" href="#">Đăng ký lịch học</a>
                     </div>
                 </li>
-                <li class="nav-item dropdown hidden-caret">
+                <li sec:authorize="hasAnyRole('RL02')" class="nav-item dropdown hidden-caret">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <i class="la la-align-justify"></i>
                     </a>
 
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Quản lý điểm</a>
+                        <a class="dropdown-item" href="/QLDiem">Quản lý điểm</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="/QLHocPhan/khoa">Quản lý học phần</a>
                         <div class="dropdown-divider"></div>
@@ -60,7 +60,7 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a class="dropdown-toggle profile-pic" data-toggle="dropdown" href="#" aria-expanded="false">
-                        <span >Hizrian</span>
+                        <span>Hizrian</span>
                     </a>
                     <ul class="dropdown-menu dropdown-user">
                         <li>
@@ -70,7 +70,7 @@
                                     <p class="text-muted">hello@themekita.com</p></div>
                             </div>
                         </li>
-                        <a class="dropdown-item" href="#"><i class="fa fa-power-off"></i> Logout</a>
+                        <a class="dropdown-item" href="/logout"><i class="fa fa-power-off"></i> Logout</a>
                     </ul>
                     <!-- /.dropdown-user -->
                 </li>
