them ctdt va diem

--- a/src/main/resources/templates/Fragments/sidebar.html
+++ b/src/main/resources/templates/Fragments/sidebar.html
@@ -40,6 +40,11 @@
                                 <span class="link-collapse">Quản lý lớp học phần</span>
                             </a>
                         </li>
+                        <li>
+                            <a href="/QL">
+                                <span class="link-collapse">Chương trình đào tạo</span>
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
