--- a/src/main/resources/templates/Fragments/header.html
+++ b/src/main/resources/templates/Fragments/header.html
@@ -56,6 +56,8 @@
                         <a class="dropdown-item" href="#">Quản lý đăng ký học phần</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#">Quản lý lớp học phần</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="/QL">Chương trình đào tạo</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
