--- a/src/main/resources/templates/QuanLy/ListLopHocPhan.html
+++ b/src/main/resources/templates/QuanLy/ListLopHocPhan.html
@@ -14,7 +14,7 @@
             <div class="card">
               <div class="card-header" style="display: flex;justify-content: space-between;">
                 <div class="card-title">Danh sách các lớp học phần</div>
-                <div class="form-group">
+                <div style="padding: 0;" class="form-group">
                   <select id="listDotHoc" onchange="loadListLopHocPhan()" class="form-control form-control" >
                     <option th:each="nh : ${listNamHocHocKy}" th:text="${nh.getDotHoc()}" th:value="${nh.getDotHoc()}"></option>
                   </select>
