--- a/src/main/resources/templates/Fragments/header.html
+++ b/src/main/resources/templates/Fragments/header.html
@@ -36,7 +36,7 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="#">Điểm</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Học phần</a>
+                        <a class="dropdown-item" href="/Student/khoa">Học phần</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#">Lịch học</a>
                         <div class="dropdown-divider"></div>
