--- a/src/main/resources/templates/Fragments/sidebar.html
+++ b/src/main/resources/templates/Fragments/sidebar.html
@@ -52,7 +52,7 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a href="components.html">
+                <a href="/Student/khoa">
                     <i class="la la-columns"></i>
                     <p>Học phần</p>
                 </a>
