--- a/src/main/resources/templates/Fragments/sidebar.html
+++ b/src/main/resources/templates/Fragments/sidebar.html
@@ -36,7 +36,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#settings">
+                            <a href="/QLLopHocPhan">
                                 <span class="link-collapse">Quản lý lớp học phần</span>
                             </a>
                         </li>
