--- a/src/main/resources/templates/QuanLy/ListLopHocPhan.html
+++ b/src/main/resources/templates/QuanLy/ListLopHocPhan.html
@@ -14,11 +14,12 @@
             <div class="card">
               <div class="card-header" style="display: flex;justify-content: space-between;">
                 <div class="card-title">Danh sách các lớp học phần</div>
-                <div style="padding: 0;" class="form-group">
+                <div th:if="${bien}" style="padding: 0;" class="form-group">
                   <select id="listDotHoc" onchange="loadListLopHocPhan()" class="form-control form-control" >
                     <option th:each="nh : ${listNamHocHocKy}" th:text="${nh.getDotHoc()}" th:value="${nh.getDotHoc()}"></option>
                   </select>
                 </div>
+                <a th:unless="${bien}" href="/QLLopHocPhan/them" class="btn btn-outline-secondary">Thêm mới</a>
               </div>
               <div class="card-body">
                 <table id="listLopHocPhan" class="table table-hover">
