--- a/src/main/resources/templates/SinhVien/ListHocPhan.html
+++ b/src/main/resources/templates/SinhVien/ListHocPhan.html
@@ -57,7 +57,7 @@
 													<th scope="col">Tên học phần</th>
 													<th scope="col">Số tín chỉ</th>
 													<th scope="col">Tên khoa</th>
-													<th scope="col">Lựa chọn</th>
+													<!-- <th scope="col">Lựa chọn</th> -->
 												</tr>
 											</thead>
 											<tbody>
@@ -67,7 +67,7 @@
 													<td th:text="${hp.getTenHocPhan()}"></td>
 													<td th:text="${hp.soTinChi}"></td>
 													<td th:text="${hp.getKhoa().getTenKhoa()}"></td>
-													<th ><a class="btn btn-info" href="#">Đăng ký ngay</a></th>
+													<!-- <th ><a class="btn btn-info" href="#">Đăng ký ngay</a></th> -->
 													<!-- <td>
 														<a class="btn btn-info" th:href="'/QLHocPhan/sua/'+${hp.getMaHocPhan()}">Sửa</a>
 													</td> -->
