--- a/src/main/resources/templates/Fragments/sidebar.html
+++ b/src/main/resources/templates/Fragments/sidebar.html
@@ -51,6 +51,12 @@
         </div>
         <ul class="nav">
             <li class="nav-item active">
+                <a href="/Student/CTDT">
+                    <i class="la la-adn"></i>
+                    <p>Chương trình đào tạo</p>
+                </a>
+            </li>
+            <li class="nav-item active">
                 <a href="index.html">
                     <i class="la la-adn"></i>
                     <p>Điểm</p>
