--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -26,7 +26,7 @@
                 <div class="container">
                 </div>
                 <div class="login-content">
-                    <!-- <th:block th:if="${messageSend != ''}">
+                    <!-- <th:block th:if="${success == ''}">
                         <script type="text/javascript" charset="utf-8">
                             window.onload = function () {
                             alert("Tên đăng nhập hoặc mật khẩu không chính xác");
