--- a/src/main/resources/templates/_layout.html
+++ b/src/main/resources/templates/_layout.html
@@ -123,5 +123,8 @@
             return true;
         }
     }
+    function toURL(mactdt){
+        window.location = 'http://localhost:8080/QL/'+mactdt;
+    }
 </script>
 </html>
