--- a/src/main/resources/templates/Fragments/sidebar.html
+++ b/src/main/resources/templates/Fragments/sidebar.html
@@ -51,7 +51,7 @@
         </div>
         <ul class="nav">
             <li class="nav-item active">
-                <a href="/Student/CTDT">
+                <a href="/sinhvien/CTDT">
                     <i class="la la-adn"></i>
                     <p>Chương trình đào tạo</p>
                 </a>
@@ -63,7 +63,7 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a href="/Student/khoa">
+                <a href="/sinhvien/khoa">
                     <i class="la la-columns"></i>
                     <p>Học phần</p>
                 </a>
