--- a/src/main/resources/templates/Fragments/header.html
+++ b/src/main/resources/templates/Fragments/header.html
@@ -34,11 +34,11 @@
                         <i class="la la-th-list"></i>
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="/Student/CTDT">Chương trình đào tạo</a> 
+                        <a class="dropdown-item" href="/sinhvien/CTDT">Chương trình đào tạo</a> 
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#">Điểm</a> 
                         <div class="dropdown-divider"></div> 
-                        <a class="dropdown-item" href="/Student/khoa">Học phần</a>
+                        <a class="dropdown-item" href="/sinhvien/khoa">Học phần</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="#">Lịch học</a>
                         <div class="dropdown-divider"></div>
