--- a/src/main/resources/templates/Fragments/header.html
+++ b/src/main/resources/templates/Fragments/header.html
@@ -35,14 +35,12 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="/sinhvien/CTDT">Chương trình đào tạo</a> 
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Điểm</a> 
                         <div class="dropdown-divider"></div> 
                         <a class="dropdown-item" href="/sinhvien/khoa">Học phần</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Lịch học</a>
+                        <a class="dropdown-item" href="/sinhvien/Diem">Điểm</a> 
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Đăng ký lịch học</a>
+                        <a class="dropdown-item" href="#">Lịch học</a>
                     </div>
                 </li>
                 <li sec:authorize="hasAnyRole('RL02')" class="nav-item dropdown hidden-caret">
