--- a/src/main/resources/templates/SinhVien/ListHocPhan.html
+++ b/src/main/resources/templates/SinhVien/ListHocPhan.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 	  layout:decorate="~{_layout.html}">
 <head>
-	<title th:text="'Học phần khoa '+${Khoa.getTenKhoa()}"></title>
+	<title th:text="'Học phần '+${Khoa.getTenKhoa()}"></title>
 </head>
 <body layout:fragment="content">
 	<div class="wrapper">
