--- a/src/main/resources/templates/Fragments/sidebar.html
+++ b/src/main/resources/templates/Fragments/sidebar.html
@@ -52,19 +52,19 @@
         <ul class="nav">
             <li class="nav-item active">
                 <a href="/sinhvien/CTDT">
-                    <i class="la la-adn"></i>
+                    <i class="la la-book"></i>
                     <p>Chương trình đào tạo</p>
                 </a>
             </li>
-            <li class="nav-item active">
-                <a href="index.html">
+            <li class="nav-item">
+                <a href="/sinhvien/Diem">
                     <i class="la la-adn"></i>
                     <p>Điểm</p>
                 </a>
             </li>
             <li class="nav-item">
                 <a href="/sinhvien/khoa">
-                    <i class="la la-columns"></i>
+                    <i class="la la-windows"></i>
                     <p>Học phần</p>
                 </a>
             </li>
@@ -72,12 +72,6 @@
                 <a href="forms.html">
                     <i class="la la-calendar"></i>
                     <p>Lịch học</p>
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href="tables.html">
-                    <i class="la la-calendar-plus-o"></i>
-                    <p>Đăng ký lịch học</p>
                 </a>
             </li>
         </ul>
