--- a/src/main/resources/templates/SinhVien/Khoa.html
+++ b/src/main/resources/templates/SinhVien/Khoa.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 	  layout:decorate="~{_layout.html}">
 <head>
-	<title>Các khoa</title>
+	<title>Danh sách các khoa</title>
 </head>
 <body layout:fragment="content">
 	<div class="wrapper">
