--- a/src/main/resources/templates/Fragments/header.html
+++ b/src/main/resources/templates/Fragments/header.html
@@ -55,8 +55,7 @@
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="/QLHocPhan/khoa">Quản lý học phần</a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Quản lý đăng ký học phần</a>
-                        <div class="dropdown-divider"></div>
+
                         <a class="dropdown-item" href="/QLLopHocPhan">Quản lý lớp học phần</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="/QL">Chương trình đào tạo</a>
@@ -64,14 +63,14 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a class="dropdown-toggle profile-pic" data-toggle="dropdown" href="#" aria-expanded="false">
-                        <span>Hizrian</span>
+                        <span th:text="${session.user.getHo() + ' ' + session.user.getTen()}"></span>
                     </a>
                     <ul class="dropdown-menu dropdown-user">
                         <li>
                             <div class="user-box">
                                 <div class="u-text">
-                                    <h4>Hizrian</h4>
-                                    <p class="text-muted">hello@themekita.com</p></div>
+                                    <h4 th:text="${session.user.getHo() + ' ' + session.user.getTen()}"></h4>
+                                    <p class="text-muted" th:text="${session.user.getEmailEdu()}"></p></div>
                             </div>
                         </li>
                         <a class="dropdown-item" href="/logout"><i class="fa fa-power-off"></i> Logout</a>
