--- a/src/main/resources/templates/Fragments/header.html
+++ b/src/main/resources/templates/Fragments/header.html
@@ -40,7 +40,7 @@
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="/sinhvien/Diem">Điểm</a> 
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Lịch học</a>
+                        <a class="dropdown-item" href="/sinhvien/LichHoc">Lịch học</a>
                     </div>
                 </li>
                 <li sec:authorize="hasAnyRole('RL02')" class="nav-item dropdown hidden-caret">
