--- a/src/main/resources/templates/SinhVien/ListHocPhan.html
+++ b/src/main/resources/templates/SinhVien/ListHocPhan.html
@@ -16,7 +16,7 @@
 									<div class="card-header" style="display: flex;justify-content: space-between;">
 										<div class="card-title" th:text="${Khoa.getTenKhoa()}"></div>
 									</div>
-									<div class="card-header">
+									<!-- <div class="card-header">
 										<div class="row">
 											<div class="col-lg-2 col-sm-6 mb-2">
 												<h6>Chuyên nghành</h6>
@@ -45,8 +45,8 @@
 											<div class="col-lg-2 col-sm-12">
 												<p class="btn btn-warning">Filter</p>
 											</div>
-										</div>
-									</div>
+										</div> 
+									</div> -->
 									<div class="card-body">
 										<table id="listHocPhan" class="table table-hover">
 											<thead>
