--- a/src/main/resources/templates/SinhVien/LopHocPhan.html
+++ b/src/main/resources/templates/SinhVien/LopHocPhan.html
@@ -15,7 +15,7 @@
             <div class="col-md-12">
               <div class="card">
                 <div class="card-header" style="display: flex;justify-content: space-between;">
-                  <div class="card-title">Danh sách các lớp học phần</div>
+                  <div class="card-title">Danh sách lớp học phần</div>
                 <th:block th:if="${messTC == '1'}">
                         <script type="text/javascript" charset="utf-8">
                             window.onload = function () {
