--- a/src/main/resources/templates/Fragments/sidebar.html
+++ b/src/main/resources/templates/Fragments/sidebar.html
@@ -69,7 +69,7 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a href="forms.html">
+                <a href="/sinhvien/LichHoc">
                     <i class="la la-calendar"></i>
                     <p>Lịch học</p>
                 </a>
