update lop hoc phan

--- a/src/main/resources/templates/Fragments/sidebar.html
+++ b/src/main/resources/templates/Fragments/sidebar.html
@@ -44,7 +44,7 @@
                 </div>
             </div>
         </div>
-        <ul class="nav">
+        <ul class="nav" sec:authorize="hasAnyRole('RL01')">
             <li class="nav-item active">
                 <a href="/Student/CTDT">
                     <i class="la la-adn"></i>
