--- a/src/main/resources/templates/Fragments/header.html
+++ b/src/main/resources/templates/Fragments/header.html
@@ -29,7 +29,7 @@
                 </div>
             </form>
             <ul class="navbar-nav topbar-nav ml-md-auto align-items-center">
-                <li class="nav-item dropdown hidden-caret">
+                <li sec:authorize="hasAnyRole('RL01')" class="nav-item dropdown hidden-caret">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <i class="la la-th-list"></i>
                     </a>
