--- a/src/main/resources/templates/QuanLy/CTDT.html
+++ b/src/main/resources/templates/QuanLy/CTDT.html
@@ -18,8 +18,12 @@
               <div class="card-body">
                 <div class="form-group">
                   <label for="MaCTDT">Mã chương trình đào tạo</label>
-                  <input onblur="checkMaCTDT()" type="text" class="form-control input-pill" name="MaCTDT" id="MaCTDT" placeholder="Mã chương trình đào tạo">
+                  <input required onblur="checkMaCTDT()" type="text" class="form-control input-pill" name="MaCTDT" id="MaCTDT" placeholder="Mã chương trình đào tạo">
                   <span id="MaCTDTError" class="text-danger" style="display: none;">Đã tồn tại!</span>
+                </div>
+                <div class="form-group">
+                  <label for="nk">Niên khoá</label>
+                  <input required type="number" max="100" min="1" name="nienkhoa" class="form-control input-pill" id="nk">
                 </div>
                 <div class="form-group">
                   <label for="cn">Chuyên ngành</label>
@@ -35,7 +39,7 @@
                 </div>
                 <div class="form-group">
                   <label for="inputGroupFile02">Chọn excel file</label>
-                    <input name="fileExcel" type="file" accept=".xlsx" class="form-control input-pill" id="inputGroupFile02">
+                    <input required name="fileExcel" type="file" accept=".xlsx" class="form-control input-pill" id="inputGroupFile02">
                 </div>
               </div>
               <div class="card-action">
