--- a/src/main/resources/templates/QuanLy/ListLopHocPhan.html
+++ b/src/main/resources/templates/QuanLy/ListLopHocPhan.html
@@ -21,8 +21,34 @@
                 </div>
                 <a th:unless="${bien}" href="/QLLopHocPhan/them" class="btn btn-outline-secondary">Thêm mới</a>
               </div>
-              <div class="card-body">
-                <table id="listLopHocPhan" class="table table-hover">
+              <div  class="card-body">
+                <table th:if="${bien}" id="listLopHocPhan" class="table table-hover">
+                  <thead>
+                  <tr>
+                    <th scope="col">Tên lớp</th>
+                    <th scope="col">Số lượng sinh viên</th>
+                    <th scope="col">Đợt học</th>
+                    <th scope="col">Thời gian học</th>
+                    <th scope="col">Tên giáo viên</th>
+                    <th scope="col">Tên phòng</th>
+                    <th scope="col">Môn học</th>
+                  </tr>
+                  </thead>
+                  <tbody>
+                  <tr th:each="lh:${ListLopHocPhan}"  style="cursor: pointer;" th:data-malop="${lh.getMaLop()}" onclick="toURLHP(this.getAttribute('data-malop'))">
+                    <td th:text="${lh.tenLop}" ></td>
+                    <td>
+                    <label th:text="${@quanLyLopHocPhanController.sl(lh.getMaLop()) + '/' + lh.maxSV}" ></label>
+                    </td>
+                    <td th:text="${lh.getDocHoc().getDotHoc()}"></td>
+                    <td th:text="${lh.lichHoc.getNgayBatDau()+' → '+ lh.lichHoc.getNgayKetThuc()}"></td>
+                    <td th:text="${lh.getGiaoVien().getHo()+ ' ' + lh.getGiaoVien().getTen()}"></td>
+                    <td th:text="${lh.getPhongHoc().getTenPhong()}"></td>
+                    <td th:text="${lh.getHocPhan().getTenHocPhan()}"></td>
+                  </tr>
+                  </tbody>
+                </table>
+                <table th:unless="${bien}" id="listLopHocPhan" class="table table-hover">
                   <thead>
                   <tr>
                     <th scope="col">Tên lớp</th>
@@ -37,13 +63,14 @@
                   </tr>
                   </thead>
                   <tbody>
-                  <tr th:each="lh:${ListLopHocPhan}" style="cursor: pointer;">
-                    <td th:text="${lh.tenLop}"></td>
+                  <tr th:each="lh:${ListLopHocPhan}" >
+                    <td style="cursor: pointer;" th:text="${lh.tenLop}" th:data-malop="${lh.getMaLop()}" onclick="toURLHP(this.getAttribute('data-malop'))"></td>
                     <td>
-                    <label th:id="'label_'+${lh.getMaLop()}" th:data-id="${lh.getMaLop()}"
-                           th:data-value="${lh.maxSV}"
-                           onclick="changeSL(this.getAttribute('data-id'),this.getAttribute('data-value'))"
-                           th:text="${@quanLyLopHocPhanController.sl(lh.getMaLop()) + '/' + lh.maxSV}" ></label>
+                      <label style="width: 100%;height: 100%;"
+                             th:id="'label_'+${lh.getMaLop()}" th:data-id="${lh.getMaLop()}"
+                             th:data-value="${lh.maxSV}"
+                             onclick="changeSL(this.getAttribute('data-id'),this.getAttribute('data-value'))"
+                             th:text="${@quanLyLopHocPhanController.sl(lh.getMaLop()) + '/' + lh.maxSV}" ></label>
                     </td>
                     <td th:text="${lh.getDocHoc().getDotHoc()}"></td>
                     <td th:text="${lh.lichHoc.getNgayBatDau()+' → '+ lh.lichHoc.getNgayKetThuc()}"></td>
@@ -52,10 +79,10 @@
                     <td th:text="${lh.getHocPhan().getTenHocPhan()}"></td>
                     <td th:if="${lh.trangThai}" class="text-success" th:id="${'trangthai_'+lh.getMaLop()}">Đang mở</td>
                     <td th:unless="${lh.trangThai}" class="text-danger" th:id="${'trangthai_'+lh.getMaLop()}">Đã đóng</td>
-                    <td th:if="${lh.trangThai}"><button th:id="${'btntrangthai_'+lh.getMaLop()}"
-                                                        th:data-id="${lh.getMaLop()}"
-                                                        onclick="changeTrangThai(this.getAttribute('data-id'),false)"
-                                                        class="btn btn-danger">Đóng ĐK</button></td>
+                    <td  th:if="${lh.trangThai}"><button th:id="${'btntrangthai_'+lh.getMaLop()}"
+                                                         th:data-id="${lh.getMaLop()}"
+                                                         onclick="changeTrangThai(this.getAttribute('data-id'),false)"
+                                                         class="btn btn-danger">Đóng ĐK</button></td>
                     <td th:unless="${lh.trangThai}"><button class="btn btn-success"
                                                             th:id="${'btntrangthai_'+lh.getMaLop()}"
                                                             th:data-id="${lh.getMaLop()}"
