--- a/src/main/resources/templates/Fragments/header.html
+++ b/src/main/resources/templates/Fragments/header.html
@@ -61,19 +61,18 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a class="dropdown-toggle profile-pic" data-toggle="dropdown" href="#" aria-expanded="false">
-                        <span th:text="${session.user.getHo() + ' ' + session.user.getTen()}"></span>
+                        <!-- <span th:text="${session.user.getHo() + ' ' + session.user.getTen()}"></span> -->
                     </a>
                     <ul class="dropdown-menu dropdown-user">
                         <li>
-                            <div class="user-box">
+                            <!-- <div class="user-box">
                                 <div class="u-text">
                                     <h4 th:text="${session.user.getHo() + ' ' + session.user.getTen()}"></h4>
                                     <p class="text-muted" th:text="${session.user.getEmailEdu()}"></p></div>
-                            </div>
+                            </div> -->
                         </li>
                         <a class="dropdown-item" href="/logout"><i class="fa fa-power-off"></i> Logout</a>
                     </ul>
-                    <!-- /.dropdown-user -->
                 </li>
             </ul>
         </div>
