--- a/src/main/resources/templates/SinhVien/LopHocPhan.html
+++ b/src/main/resources/templates/SinhVien/LopHocPhan.html
@@ -48,11 +48,13 @@
                         <td th:text="${lh.getGiaoVien().getHo()+ ' ' + lh.getGiaoVien().getTen()}"></td>
                         <td th:text="${lh.getPhongHoc().getTenPhong()}"></td>
                         <td th:text="${lh.getHocPhan().getTenHocPhan()}"></td>
-                        <td th:if="${lh.trangThai == true}" th:text="${'Đã đóng'}" style="color:red"></td>
-                        <td th:unless="${lh.trangThai == true}" th:text="${'Đang mở'}" style="color:green"></td>
+                        <td th:if="${lh.trangThai != true}" th:text="${'Đã đóng'}" style="color:red"></td>
+                        <td th:unless="${lh.trangThai != true}" th:text="${'Đang mở'}" style="color:green"></td>
                         <!-- <th:block th:each="dkl : ${Listcheck}"> -->
                           <td th:if="${@studentController.checkDK(#authentication.getPrincipal().getUsername() , lh.getMaLop()) == true}" ><button
-                              class="btn btn-secondary" disabled>Đã đăng ký</button></td>
+                              class="btn btn-secondary" disabled>Đã đăng ký</button>
+                              <button class="btn btn-danger">Hủy đăng ký</button>
+                            </td>
                           <td th:unless="${@studentController.checkDK(#authentication.getPrincipal().getUsername() , lh.getMaLop()) == true}" ><a
                               th:href="@{'/sinhvien/DangKyHP/'+${lh.getMaLop()}}" class="btn btn-info">Đăng ký ngay</a>
                           </td>
