--- a/src/main/resources/templates/Fragments/sidebar.html
+++ b/src/main/resources/templates/Fragments/sidebar.html
@@ -2,7 +2,8 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <link rel="shortcut icon" href="../img/logo1.ico" type="image/x-icon">
+    <title>HCMUNRE</title>
 </head>
 <body th:fragment="sidebar">
 <div class="sidebar">
