--- a/src/main/resources/templates/SinhVien/Khoa.html
+++ b/src/main/resources/templates/SinhVien/Khoa.html
@@ -2,6 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 	  layout:decorate="~{_layout.html}">
 <head>
+	<link rel="shortcut icon" href="/assets/img/logo.ico" type="image/x-icon">
 	<title>Danh sách các khoa</title>
 </head>
 <body layout:fragment="content">
