--- a/src/main/resources/templates/QuanLy/ThemLopHocPhan.html
+++ b/src/main/resources/templates/QuanLy/ThemLopHocPhan.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{_layout.html}">
 <head>
+	<link rel="shortcut icon" href="/assets/img/logo.ico" type="image/x-icon">
   <title>Thêm lớp học phần</title>
 </head>
 <body layout:fragment="content">
