--- a/src/main/resources/templates/SinhVien/ListLichHoc.html
+++ b/src/main/resources/templates/SinhVien/ListLichHoc.html
@@ -3,6 +3,7 @@
     layout:decorate="~{_layout.html}">
 
 <head>
+	<link rel="shortcut icon" href="/assets/img/logo.ico" type="image/x-icon">
     <title>Lịch học</title>
 </head>
 
