--- a/src/main/resources/templates/_layout.html
+++ b/src/main/resources/templates/_layout.html
@@ -185,5 +185,8 @@
     function toURLHP(malop){
         window.location = 'http://localhost:8080/QLDiem/'+malop;
     }
+    function toURLHPDK(malop){
+        window.location = 'http://localhost:8080/QLLopHocPhan/DK/'+malop;
+    }
 </script>
 </html>
