--- a/src/main/resources/templates/SinhVien/ChitietLopHP.html
+++ b/src/main/resources/templates/SinhVien/ChitietLopHP.html
@@ -68,7 +68,7 @@
                                             </div>
                                             <div class="col-12 mb-5 mt-5">
                                                 <button type="submit" class="btn btn-info">Xác nhận</button>
-                                                <button type="button" class="btn btn-secondary">Hủy</button>
+                                                <a type="button" href="/sinhvien/DangkyHP" class="btn btn-secondary">Hủy</a>
                                             </div>
                                         </div>
                                     </form>
